--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "vue-form-replay3",
   "version": "1.0.0",
   "description": "",
-
   "main": "dist/vue-form-replay3.ssr.js",
   "browser": "dist/vue-form-replay3.esm.js",
   "module": "dist/vue-form-replay3.esm.js",
   "unpkg": "dist/vue-form-replay3.min.js",
-
   "files": [
     "dist/*",
     "src/**/*.vue"
   ],
   "sideEffects": false,
-
   "scripts": {
     "serve": "vue-cli-service serve dev/serve.js",
     "prebuild": "rimraf ./dist",
@@ -22,10 +19,6 @@
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
-
-  "dependencies": {
-  },
-
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
@@ -52,5 +45,9 @@
   },
   "engines": {
     "node": ">=12"
+  },
+  "dependencies": {
+    "codemirror": "^5.65.0",
+    "diff-match-patch": "^1.0.5"
   }
 }
